# flipper

./: .gitattributes  .gitignore  .gitmodules  BaseDefines.qbs  BuildHelpers.js  Ficform.qml  FicformForm.ui.qml  GitProbe.qbs  Precompiled.qbs  README.md  core_condition.qbs  crawler.pro  crawler_to_production.qbs  crawler_to_production_proj.qbs  discord.qbs  discord_proj.qbs  environment_plugs.qbs  feed_server.qbs  feed_server_proj.qbs  ffsse.qbs  ffsse_proj.qbs  flipper.qbs  flipper_proj.qbs  forms.qrc  gui_condition.qbs  icons.qrc  incremental_schema_updater.qbs  incremental_schema_updater_proj.qbs  main.cpp  mainwindow.cpp  mainwindow.cpp.AO9920  mainwindow.h  mainwindow.ui  metafile.txt  metafile_ffnet_hub.txt  qml_ficmodel.cpp  qml_ficmodel.h  servitor.qbs  servitor_proj.qbs  sql_proj.qbs  (+3 more)
.github/: FUNDING.yml
Run/: quazip.lib  settings.ini  settings_server.ini
Run/dbcode/: dbinit.sql  discord_init.sql  pagecacheinit.sql  slashdbinit.sql  tasksinit.sql  user_db_init.sql
Run/defaults/: servitor.ini  settings.ini  ui.ini
Run/lists/: sneaky.txt
UI/: actionprogress.ui  fandomlistwidget.ui  fanficdisplay.ui  initialsetupdialog.ui  mainwindow.ui  servitorwindow.ui  tagwidget.ui  welcomedialog.ui
changelogs/: changes1.2.1-1.3.0.txt
cmake/flipper/: CMakeLists.txt  app.cmake  debug.cmake  grpc.cmake
dockerfiles/: builder.base  builder.ficrec_bot  builder.server
documentation/: accessing remote environment.txt
include/: ECacheMode.h  EGenres.h  ImmediateTooltipStyle.h  actionprogress.h  backups.h  cache_strategy.h  calc_data_holder.h  container_utils.h  database.h  db.h  db_ffn.h  db_fixers.h  db_synch.h  environment.h  fandomparser.h  fanficdisplay.h  favholder.h  favparser.h  feeder_environment.h  ffnparserbase.h  ficparser.h  flipper_client_logic.h  flipper_server_logic.h  generic_utils.h  in_tag_accessor.h  init_database.h  mainwindow.h  page_utils.h  pageconsumer.h  pagegetter.h  pagetask.h  parse.h  pure_sql.h  qstring_from_stringview.h  querybuilder.h  queryinterfaces.h  reclist_author_result.h  regex_utils.h  rng.h  section.h  (+12 more)
include/Interfaces/: authors.h  base.h  data_source.h  db_interface.h  fandom_lists.h  fandoms.h  fanfics.h  genres.h  interface_sqlite.h  pagetask.h  pagetask_interface.h  recommendation_lists.h  tags.h
include/core/: author.h  db_entity.h  fandom.h  fandom_list.h  fanfic.h  fav_list_analysis.h  fav_list_details.h  fic_genre_data.h  identity.h  recommendation_list.h  section.h  slash_data.h  url.h
include/data_code/: data_holders.h  rec_calc_data.h
include/discord/: actions.h  cached_message_source.h  client.h  client_storage.h  client_v2.h  command.h  command_chain.h  command_controller.h  command_creators.h  command_generators.h  command_parser.h  command_types.h  commands.h  db_vendor.h  discord_ffn_page.h  discord_init.h  discord_message_token.h  discord_pagegetter.h  discord_server.h  discord_user.h  fandom_filter_token.h  favourites_fetching.h  fetch_filters.h  help_generator.h  identity_hash.h  limits.h  rec_message_recreation_token.h  review.h  send_message_command.h  slashcommands.h  task.h  task_environment.h  task_runner.h  timed_token.h  type_functions.h  type_strings.h
include/filters/: date_filter.h
include/grpc/: grpc_log.h  grpc_source.h
include/loggers/: usage_statistics.h
include/precompiled/: pch.h
include/qml/: imageprovider.h
include/rec_calc/: rec_calculator_base.h  rec_calculator_mood_adjusted.h  rec_calculator_weighted.h
include/servers/: database_context.h  feed.h  token_processing.h
include/sql_abstractions/: pqxx_connection_wrapper.h  shared_trick.h  sql_connection_token.h  sql_context.h  sql_database.h  sql_database_impl_base.h  sql_database_impl_null.h  sql_database_impl_pq.h  sql_database_impl_sqlite.h  sql_error.h  sql_query.h  sql_query_impl_base.h  sql_query_impl_null.h  sql_query_impl_pq.h  sql_query_impl_sqlite.h  sql_transaction.h  sql_variant.h  string_hasher.h  string_streamer.h  string_trimmer.h
include/tasks/: author_cache_reprocessor.h  author_genre_iteration_processor.h  author_stats_processor.h  author_task_processor.h  fandom_list_reload_processor.h  fandom_task_processor.h  (+3 more)
libs/Logger/: CMakeLists.txt  CMakePresets.json  logger.qbs
libs/Logger/include/: pch_core.h
libs/Logger/include/logger/: QsLog.h  QsLogDest.h  QsLogDestConsole.h  QsLogDestFile.h  QsLogLevel.h  QsLogger.h  Tracer.h  l_logger_global.h  loggersetup.h
libs/Logger/include/logger/version/: version.h
libs/Logger/src/: QsLog.cpp  QsLogDest.cpp  QsLogDestConsole.cpp  QsLogDestFile.cpp
lists/: proto.txt
proto/: diagnostic_recommendations.proto  fandom.proto  fanfic.proto  favlist.proto  feeder_service.proto  filter.proto  recommendations.proto  server_base_structs.proto
qml/: ficview.qml
reference_queries/: cleaning up slash.txt  genre_detector.sql  slash_passing.txt
shell/: backup_production_bot.sh  clone_production_db.sh  clone_production_to_test.sh  deploy_bot.sh  deploy_client.sh  deploy_entry_check.sh  deploy_server.sh  env_or_defaults.sh  flare_post.js  flipper.run  fpm.sh  fpm_client.sh  fpm_server.sh  garbage_collector.txt  page_fixer.sh  push_bot.template  rebuild.sh  remote_deploy_bot.sh  remote_fetch_user_database.sh  remote_start_bot.sh  remote_stop_bot.sh  remove_registry_image.sh
src/: actionprogress.cpp  backups.cpp  calc_data_holder.cpp  db.cpp  db_ffn.cpp  db_fixers.cpp  db_synch.cpp  environment.cpp  fandomparser.cpp  fanficdisplay.cpp  favholder.cpp  favparser.cpp  feeder_environment.cpp  ffnparserbase.cpp  ficparser.cpp  flipper_client_logic.cpp  flipper_server_logic.cpp  generic_utils.cpp  genericeventfilter.cpp  in_tag_accessor.cpp  init_database.cpp  main.cpp  main_data_transfer.cpp  main_discord.cpp  main_feed_server.cpp  main_ffsse.cpp  main_flipper.cpp  main_schema_updater.cpp  main_servitor.cpp  main_tag_extractor.cpp  mainwindow.cpp  mainwindow_utility.cpp  page_utils.cpp  pageconsumer.cpp  pagegetter.cpp  pagetask.cpp  pure_sql.cpp  querybuilder.cpp  regex_utils.cpp  rng.cpp  (+10 more)
zlib/: genericeventfilter.h  mainwindow.h  parse.h  tagwidget.h
(+253 files in other folders)
